force-app/main/default/objects/Party__c/fields/LASTMODIFIEDBYID__c.field-meta.xml
<CustomField>
    <fullName>LASTMODIFIEDBYID__c</fullName>
    <label>Last Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>