force-app/main/default/objects/Party__c/fields/NAME__c.field-meta.xml
<CustomField>
    <fullName>NAME__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>