force-app/main/default/objects/Party__c/fields/OCE_ADDRESSLINE1_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_ADDRESSLINE1_C__c</fullName>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>