force-app/main/default/objects/Party__c/fields/OCE_EXTERNALPAYEEID_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_EXTERNALPAYEEID_C__c</fullName>
    <label>External Payee ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>