force-app/main/default/objects/Party__c/fields/OCE_ISDELETEDOFFLINE_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_ISDELETEDOFFLINE_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deleted Offline</label>
    <type>Checkbox</type>
</CustomField>