force-app/main/default/objects/Party__c/fields/OCE_ISPRIMARY_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_ISPRIMARY_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>