force-app/main/default/objects/Party__c/fields/OCE_LEGALENTITY_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_LEGALENTITY_C__c</fullName>
    <label>Legalentity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>