force-app/main/default/objects/Party__c/fields/OCE_SPEAKER_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_SPEAKER_C__c</fullName>
    <label>Speaker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>