force-app/main/default/objects/Party__c/fields/OCE_STATE_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_STATE_C__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>