force-app/main/default/objects/Party__c/fields/OCE_ZIPCODE_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_ZIPCODE_C__c</fullName>
    <label>Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>