force-app/main/default/objects/Party__c/fields/OWNERID__c.field-meta.xml
<CustomField>
    <fullName>OWNERID__c</fullName>
    <label>Owner ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>